# goodailist-clone

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RUNBOOK.md  SPEC.md  alembic.ini  pyproject.toml
.claw/hooks/: post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py
.github/workflows/: ci.yml
ai-rules/vibecodekit/assets/: rri-question-bank.json
ai-rules/vibecodekit/scripts/vibecodekit/: __init__.py  _audit_log.py  _logging.py  _platform_lock.py  approval_contract.py  auto_commit_hook.py  auto_writeback.py  cli.py  compaction.py  conformance_audit.py  context_modifier_chain.py  cost_ledger.py  dashboard.py  denial_store.py  deploy_orchestrator.py  doctor.py  eval_select.py  event_bus.py  hook_interceptor.py  install_manifest.py  intent_router.py  learnings.py  manifest_llm.py  mcp_client.py  memory_hierarchy.py  memory_retriever.py  memory_writeback.py  methodology.py  module_workflow.py  permission_engine.py  pipeline_router.py  quality_gate.py  query_loop.py  (+16 more)
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase_b_snapshots.py  0003_phase_b_backfill.py
app/: __init__.py  db.py  freshness.py  main.py  models.py  schemas.py  seed.py
app/ingest/: __init__.py  etag_store.py  github_client.py  ingestor.py  scheduler.py
app/routes/: admin.py  charts.py  repos.py
app/templates/: base.html  charts.html  repos.html
docs/: RUNBOOK-phase-b.md
seed_data/: repos.json
tests/: conftest.py  test_admin.py  test_alembic_migrations.py  test_charts_endpoint.py  test_etag_store.py  test_freshness.py  test_github_client.py  test_ingestor.py  test_models.py  test_phase_b_backfill.py  test_phase_b_models.py  test_repos_endpoint.py  test_scheduler.py  test_seed.py  test_smoke_app.py  test_startup_backfill.py
(+15 files in other folders)
