[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodailist-clone"
version = "0.1.0"
description = "Clone of goodailist.com/repos — Phase A MVP (FastAPI + SQLite + HTMX)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "VibecodeKit demo" }]
dependencies = [
    "fastapi[standard]>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "httpx>=0.27,<1.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "coverage>=7.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["ai-rules", ".vibecode", ".claw"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends/Query in defaults is idiomatic.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]  # capitalised local var (`Maker = sessionmaker(...)`) is idiomatic.

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
